--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,7 +29,12 @@ jobs:
 
     steps:
       - name: Récupération du code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+        - name: Install rsync + sudo
+          run: |
+            sudo apt-get update –qq
+            sudo apt-get install -y rsync
 
       - name: Config SSH
         run: |
