Correction : rsync install + fix syntax error 2

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install rsync + sudo
         run: |
-          sudo apt-get update –qq
+          sudo apt-get update -qq
           sudo apt-get install -y rsync
 
       - name: Config SSH
