--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,26 +31,21 @@ jobs:
       - name: Récupération du code
         uses: actions/checkout@v4
 
-      - name: Install rsync + sudo
-        run: |
-          sudo apt-get update -qq
-          sudo apt-get install -y rsync
-
       - name: Config SSH
+        env:
+          PORT: ${{ secrets.VPS_PORT }}
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.VPS_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -p ${{ secrets.VPS_PORT }} -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
 
-
       - name: Test SSH connexion
-        run: ssh -o StrictHostKeyChecking=no -p ${{ secrets.VPS_PORT }} ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "echo 'SSH OK'"
-
+        run: ssh -o StrictHostKeyChecking=no -p ${{ secrets.VPS_PORT }} ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "echo 'SSH OK' port=\$PORT"
 
       - name: Déploiement sur le VPS
         env:
           PORT: ${{ secrets.VPS_PORT }}
         run: |
-          rsync -avz -e "ssh -p $PORT" --exclude '.git' ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:~/lamp-app
+          rsync -avz -e "ssh -p \$PORT" --exclude '.git' ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:~/lamp-app
           ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} -p ${{ secrets.VPS_PORT }} "cd ~/lamp-app && docker compose pull && docker compose up -d --build"
