retour en arriere

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,10 +40,7 @@ jobs:
 
       - name: Déploiement sur le VPS
         run: |
-          rsync -avz \
-            -e "ssh -p ${{ secrets.VPS_PORT }} -o StrictHostKeyChecking=no" \
-            --exclude='.git' --exclude='.github' \
-            ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:~/lamp-app
+          rsync -avz -e "ssh -p ${{ secrets.VPS_PORT }}" --exclude='.git' --exclude='.github' ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:~/lamp-app
 
       - name: Redémarrage de Docker
         run: |
