echo PATH et which rsync

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,7 +40,10 @@ jobs:
 
       - name: Test binary rsync
         run: |
-          echo $PATH
+          echo "PATH=$PATH"
+          ls /usr/bin/rsync
+          echo "RSYNC="
+          which rsync
 #          echo "PATH=$PATH" >> $GITHUB_PATH  # Persiste pour steps suivants
 
 #      - name: Déploiement sur le VPS
