--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,6 +38,14 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -p ${{ secrets.VPS_PORT }} -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
 
+
+      - name: Install rsync FORCE
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get purge -y rsync || true
+          sudo apt-get install -y rsync
+          /usr/bin/rsync --version  # Doit afficher 3.x.x
+
       - name: Test binary rsync
         run: |
           echo "PATH=$PATH"
