--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,22 +39,22 @@ jobs:
           ssh-keyscan -p ${{ secrets.VPS_PORT }} -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
 
 
-      - name: Install rsync FORCE
-        run: |
+#      - name: Install rsync FORCE
+#        run: |
           sudo apt-get update -qq
           sudo apt-get purge -y rsync || true
           sudo apt-get install -y rsync
           /usr/bin/rsync --version  # Doit afficher 3.x.x
 
-      - name: Test binary rsync
-        run: |
+#      - name: Test binary rsync
+#        run: |
           echo "PATH=$PATH"
           echo "RSYNC="
           which rsync
 #          echo "PATH=$PATH" >> $GITHUB_PATH  # Persiste pour steps suivants
 
-      - name: Déploiement sur le VPS
-        run: |
+#      - name: Déploiement sur le VPS
+#        run: |
           /usr/bin/rsync -avz -e "ssh -p ${{ secrets.VPS_PORT }}" --exclude='.git' --exclude='.github' ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:~/lamp-app
 
       - name: Redémarrage de Docker
