--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,8 +39,8 @@ jobs:
           ssh-keyscan -p ${{ secrets.VPS_PORT }} -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
 
 
-#      - name: Install rsync FORCE
-#        run: |
+      - name: Install rsync FORCE
+        run: |
           sudo apt-get update -qq
           sudo apt-get purge -y rsync || true
           sudo apt-get install -y rsync
