--- a/.github/workflows/ci-cd-GHCR.yml
+++ b/.github/workflows/ci-cd-GHCR.yml
@@ -43,4 +43,4 @@ jobs:
       - name: Déploiement sur le VPS
         run: |
           rsync -avz -e "ssh -p ${{ secrets.VPS_PORT }}" --exclude '.git'  --exclude '.github' ./ ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }}:~/lamp-app
-          ssh -p ${{ secrets.VPS_PORT }} ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "cd ~/lamp-app && docker compose -f docker-compose-GHCR.yml pull && docker compose -f docker-compose-GHCR.yml up -d"
+          ssh -p ${{ secrets.VPS_PORT }} ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} "cd ~/lamp-app && echo '${{ secrets.GHCR_TOKEN }}' | docker login ghcr.io -u  ${{ github.actor }} --password-stdin && docker compose -f docker-compose-GHCR.yml pull && docker compose -f docker-compose-GHCR.yml up -d"
