--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,11 @@ jobs:
       - name: Login to GHCR
         run:  echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
+      - name: Lowercase owner
+        run: |
+          OWNER_LC="${{ github.repository_owner,, }}"
+          echo "OWNER_LC=$OWNER_LC" >> $GITHUB_ENV
+
       - name: Build image
         run: docker build -t ghcr.io/${{ github.repository_owner }}/lamp-app:latest ./lamp
 
