--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,14 +15,9 @@ jobs:
       - name: Login to GHCR
         run:  echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Lowercase owner
-        run: |
-          ownler_lc=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          echo "OWNER_LC=$owner_lc" >> $GITHUB_ENV
-
       - name: Build image
         run: |
-          docker build -t ghcr.io/${{ env.OWNER_LC }}/lamp-app:latest ./lamp
+          docker build -t ghcr.io/isabel-sevilla/lamp-app:latest ./lamp
 
       - name: Push image
-        run: docker push ghcr.io/${{ env.OWNER_LC }}/lamp-app:latest
+        run: docker push ghcr.io/isabel-sevilla/lamp-app:latest
